kyy-k8s-config/dev/app/frontend/fe-wap/fe-wap-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose-darwin-amd64 convert -f fe-wap.yaml
    kompose.version: 1.17.0 (70e82c92)
  labels:
    app: fe-wap
  name: fe-wap
spec:
  ports:
    - name: "80"
      port: 80
      targetPort: 80
  selector:
    app: fe-wap
